fixed image stretch

--- a/my-app/src/CSS/css/styles.css
+++ b/my-app/src/CSS/css/styles.css
@@ -188,6 +188,11 @@ p {
   min-height: 60px;
 }
 
+.center {
+  display: flex;
+  justify-content: center;
+}
+
 .mystery-preview {
   max-width: 300px;
   min-height: 500px;
@@ -195,7 +200,7 @@ p {
   padding: 20px;
 }
 .mystery-preview .mystery-image {
-  width: 300px;
+  max-width: 300px;
   height: 300px;
   -webkit-box-align: center;
   -ms-flex-align: center;
@@ -322,4 +327,14 @@ p {
     margin-left: 20px;
     margin-right: 20px;
   }
+}
+
+
+@media only screen and (max-width: 600px) {
+
+  .phone-picture {
+    max-width: 500px;
+    justify-content: center;
+  }
+
 }
